--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "ai": "^2.1.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "langchain": "^0.0.95",
     "next": "13.4.5",
+    "openai-edge": "^1.0.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
